[package]
name = "tweet"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
chrono = { version = "0.4.35", features = ["serde"] }
diesel = { version = "2.1.5", features = ["chrono", "postgres", "r2d2", "uuid"] }
dotenv = "0.15.0"
env_logger = "0.11.3"
once_cell = "1.19.0"
salvo = { version = "0.66.2", features = ["cors", "anyhow", "logging"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["serde", "v4"] }
